# Decoradores

./: exemplo.py  exemplo_00.py  pyproject.toml
