[project]
name = "decoradores"
version = "0.1.0"
description = "Estudos sobre decoradores em Python"
authors = [
    { name = "Felipe Vital" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = ["loguru (>=0.7.3,<0.8.0)"]

[tool.poetry]
packages = [{ include = "decoradores" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
